# PawnPro-Engine

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  SUPPORT.md  index.html  mkdocs.yml  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  release.yml  scorecard.yml
changelogs/: CHANGELOG_v0.md
diagnostics/: index.html
docs/: diagnostics.md  i18n.md  index.md  lsp.md  naming-assistant.md  naming-lists.md  requirements.txt
lsp/: index.html
search/: search_index.json
src/: config.rs  main.rs  server.rs  text.rs  util.rs  workspace.rs
src/analyzer/: codes.rs  deprecated.rs  diagnostic.rs  hints.rs  includes.rs  indentation.rs  mod.rs  naming.rs  semantic.rs  undefined.rs  unused.rs
src/intellisense/: codelens.rs  completion.rs  format_engine.rs  format_indent.rs  format_style.rs  formatter.rs  hover.rs  mod.rs  quickfix.rs  references.rs  rename.rs  semantic_tokens.rs  signature.rs
src/messages/: en.rs  mod.rs  pt_br.rs
src/messages/langs/: en.rs  es.rs  mod.rs  pt_br.rs  ro.rs  ru.rs
src/naming/: locals.rs  mod.rs  rules.rs  style.rs  suggest.rs
src/parser/: lexer.rs  mod.rs  stmt_parser.rs  symbols.rs  token_lexer.rs  types.rs
