[package]
name = "pawnpro-engine"
version = "1.1.0"
edition = "2024"
description = "PawnPro IntelliSense engine — LSP server for Pawn language"
license = "SEE LICENSE IN LICENSE.md"
authors = ["NullSablex <https://github.com/NullSablex>"]
repository = "https://github.com/NullSablex/PawnPro-Engine"
homepage = "https://github.com/NullSablex/PawnPro-Engine"

[[bin]]
name = "pawnpro-engine"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
dashmap = "6"
once_cell = "1"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
